# OpenVED

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md  vcpkg.json
.github/workflows/: release.yml
packaging/icons/: openved.icns
packaging/macos/: Info.plist.in
packaging/windows/: openved.rc  openved.wxs
scrapbook/: Portierungsplan_2.md  doc_tech_QT_communication__Ved.md  junie_bestand_analyse_borland.md  old_analyse.md  performance_analyse_vec_edit_cursor.md  portierung_und_modernisierung.md
scrapbook/Portierung_Phase_3/: port_step_3_plan.md
scrapbook/closed_stories/: story_15_font_converter_tool.md  story_bspline_text_performance_teil-1.md  story_document_templates_new_document.md  story_drag_document_reset_view.md  story_ellipse_korrekturen.md  story_pdf_print_export.md  story_persist_page_unit_grid_metadata.md  story_remove_sclib_modern_cpp.md  story_text_portierung_phase_3.md  story_ved_document_persistence_v1_0_1.md
scrapbook/closed_stories/Portierung_Phase_3/: port_step_3_plan.md
scrapbook/open_stories/: concept_units_pages_templates_pdf_print.md  plan_installer_build_github_distribution.md  plan_units_grid_rulers_page_settings.md  story_11_layers_and_object_order.md  story_12_core_decorative_attributes.md  story_14_object_list_and_attribute_editors.md  story_15_font_converter_tool.md  story_16_webassembly.md  story_bspline_text_performance.md  story_bspline_text_performance_teil-2.md  story_bspline_text_performance_teil-2_PROTHINK01_Mai-26-093101-2026_Conflict.md  story_core_units_grid_rulers_page_settings.md  story_document_font_packaging.md  story_document_templates_new_document.md  story_font_provider_truetype_converter_plugin.md  story_multi_view_document_views.md  story_operation_helper_line_status_metrics.md  story_pdf_print_export.md  story_plugin_architecture_persistent_semantics.md  story_qt_ui_modularization.md
scripts/: build-macos.sh  build-windows.ps1  regenerate-fonts.sh
src/app/: DocumentSetupDialog.cpp  DocumentSetupDialog.h  MainWindow.cpp  MainWindow.h  MainWindowCurveDock.cpp  MainWindowRotateDock.cpp  MainWindowRoundRectangleDock.cpp  MainWindowTextDock.cpp  MainWindowToolbars.cpp  PageSetupDialog.cpp  PageSetupDialog.h  QVedWidget.cpp  QVedWidget.h  QtVecFontProviders.cpp  QtVecFontProviders.h  main.cpp
src/app/resources/font/: amiri.vfn  liberation_mono.vfn  liberation_sans.vfn  liberation_serif.vfn  noto_sans.vfn  noto_sans_hebrew.vfn  wps_default.vfn
src/tools/ved_font_converter/: main.cpp
src/ved_core/fontengine/: vec_font.cpp  vec_font.h  vec_font_manager.cpp  vec_font_manager.h
src/ved_core/gengine/: vec_graphic_engine.cpp  vec_graphic_engine.h  vec_graphic_engine_screen_state.cpp  vec_graphic_engine_screen_state.h
src/ved_core/main/: vec_document_settings.cpp  vec_document_settings.h  vec_edit.cpp  vec_edit.h  vec_edit_cad.cpp  vec_edit_cad.h  vec_export_coordinate_mapper.cpp  vec_export_coordinate_mapper.h  vec_maindef.h  vec_measure_scale.cpp  vec_measure_scale.h  vec_model.cpp  vec_model.h  vec_units.cpp  vec_units.h  vec_view_interface.cpp  vec_view_interface.h
src/ved_core/mathlib/: vec_math_base.cpp  vec_math_base.h  vec_math_graph2d.cpp  vec_math_graph2d.h
src/ved_core/operations/: voc_beziercurve_controlpoint.cpp  voc_beziercurve_controlpoint.h  voc_bspline_controlpoint.cpp  voc_bspline_controlpoint.h  voc_circle_diagonal.cpp  voc_circle_diagonal.h  voc_circle_diameter.cpp  voc_circle_diameter.h  voc_circle_edge.cpp  voc_circle_edge.h  voc_circle_midpoint.cpp  voc_circle_midpoint.h  voc_ellipse_midpoint.cpp  voc_ellipse_midpoint.h  voc_ellipse_orthogonal.cpp  voc_ellipse_orthogonal.h  voc_line.cpp  voc_line.h  voc_polycurve.cpp  voc_polycurve.h  voc_polygon_smartline.cpp  voc_polygon_smartline.h  voc_rectangle_notrotated.cpp  voc_rectangle_notrotated.h  voc_rectangle_rotated.cpp  voc_rectangle_rotated.h  voc_roundrectangle_notrotated.cpp  voc_roundrectangle_notrotated.h  voc_vecframetext_empty.cpp  voc_vecframetext_empty.h  voc_vectext.cpp  voc_vectext.h  vom_change_edge_round_node.cpp  vom_change_edge_round_node.h  vom_delete_node.cpp  vom_delete_node.h  vom_delete_object.cpp  vom_delete_object.h  vom_insert_node.cpp  vom_insert_node.h  (+26 more)
src/ved_core/serialization/: ved_binary_format.h  ved_binary_reader.cpp  ved_binary_reader.h  ved_binary_writer.cpp  ved_binary_writer.h  ved_document_view_state.h  ved_font_resolution.cpp  ved_font_resolution.h  ved_model_io.cpp  ved_model_io.h  ved_object_io.cpp  ved_object_io.h
src/ved_core/vecobjects/: vec_bezier_curve.cpp  vec_bezier_curve.h  vec_bspline.cpp  vec_bspline.h  vec_contur_point.h  vec_ellipse.cpp  vec_ellipse.h  vec_group.cpp  vec_group.h  vec_line.cpp  vec_line.h  vec_object.cpp  vec_object.h  vec_object_geometry.cpp  vec_object_geometry.h  vec_polycurve.cpp  vec_polycurve.h  vec_polycurve_area.cpp  vec_polycurve_area.h  vec_polygon.cpp  vec_polygon.h  vec_polygon_area.cpp  vec_polygon_area.h  vec_text.cpp  vec_text.h
src/ved_fontconvert/: ttf_to_vecfont.cpp  ttf_to_vecfont.h
src/ved_qt/gengine/: vec_graphic_engine_qt.cpp  vec_graphic_engine_qt.h
tests/: ved_core_change_edge_round_node_operation_tests.cpp  ved_core_circle_ellipse_operation_tests.cpp  ved_core_curve_object_tests.cpp  ved_core_delete_operation_tests.cpp  ved_core_document_settings_tests.cpp  ved_core_export_mapper_tests.cpp  ved_core_line_tests.cpp  ved_core_measure_scale_tests.cpp  ved_core_model_io_tests.cpp  ved_core_model_tests.cpp  ved_core_move_object_operation_tests.cpp  ved_core_node_operation_tests.cpp  ved_core_polygon_polycurve_operation_tests.cpp  ved_core_rectangle_operation_tests.cpp  ved_core_rotate_operation_tests.cpp  ved_core_scale_3point_operation_tests.cpp  ved_core_select_move_operation_tests.cpp  ved_core_select_operation_tests.cpp  ved_core_select_scale_frame_operation_tests.cpp  ved_core_serialization_tests.cpp  ved_core_text_tests.cpp  ved_core_units_tests.cpp  ved_core_vec_font_tests.cpp  ved_core_vfn_save_roundtrip_tests.cpp  ved_core_zoom_pan_tests.cpp  ved_fontconvert_pipeline_tests.cpp  ved_qt_gengine_outline_tests.cpp
